<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.neosvet.wallpaper.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_gravity="bottom"
            android:indeterminate="true"
            android:visibility="gone" />
    </FrameLayout>

    <include layout="@layout/main_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

    <View
        android:id="@+id/alpha_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/menuImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/field"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/cmdReplsaceList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/replace_list"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/cmdAddList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:text="@string/add_list"
            android:textColor="@android:color/white"
            android:textSize="22sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/lvCategories"
        android:layout_width="@dimen/def_width"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/field"
        android:padding="3dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:background="@drawable/field"
        android:padding="10dp"
        android:text="@string/ready"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:visibility="gone" />

</RelativeLayout>
